// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GraphicContent /> Should render correctly 1`] = `
<div>
  <div
    class="graphic-content__outer-container"
  >
    <div
      class="graphic-content__content-container graphic-content__content-container--hidden"
    >
      <span>
        Test
      </span>
    </div>
    <div
      class="graphic-content__warning-container"
    >
      <div
        class="graphic-content__warning-container__inner"
      >
        <div
          class="graphic-content__text"
        >
          This image contains graphic content
        </div>
        <br />
        <button
          class="button__outer button__outer--regular button__outer--no-bouncy graphic-content__text"
          type="button"
        >
          Show graphic content
        </button>
        <br />
        <div
          class="checkbox"
        >
          <input
            aria-invalid="false"
            aria-label="Always show graphic content"
            class="checkbox__input"
            name="Always show graphic content"
            readonly=""
            type="checkbox"
          />
          <svg
            class="icon checkbox__check"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
            />
          </svg>
          <span
            aria-hidden="true"
            class="checkbox__label graphic-content__text"
          >
             
            Always show graphic content
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GraphicContent /> Should render correctly with alwaysShow 1`] = `
<div>
  <div
    class="graphic-content__outer-container"
  >
    <div
      class="graphic-content__content-container graphic-content__content-container--hidden"
    >
      <span>
        Test
      </span>
    </div>
    <div
      class="graphic-content__warning-container"
    >
      <div
        class="graphic-content__warning-container__inner"
      >
        <div
          class="graphic-content__text"
        >
          This image contains graphic content
        </div>
        <br />
        <button
          class="button__outer button__outer--regular button__outer--no-bouncy graphic-content__text"
          type="button"
        >
          Show graphic content
        </button>
        <br />
        <div
          class="checkbox"
        >
          <input
            aria-invalid="false"
            aria-label="Always show graphic content"
            checked=""
            class="checkbox__input"
            name="Always show graphic content"
            readonly=""
            type="checkbox"
          />
          <svg
            class="icon checkbox__check checkbox__check--checked"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
            />
          </svg>
          <span
            aria-hidden="true"
            class="checkbox__label graphic-content__text"
          >
             
            Always show graphic content
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GraphicContent /> Should render correctly with contentInView 1`] = `
<div>
  <div
    class="graphic-content__outer-container"
  >
    <div
      class="graphic-content__content-container"
    >
      <span>
        Test
      </span>
    </div>
  </div>
</div>
`;

exports[`<GraphicContent /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="graphic-content__outer-container test-custom-className"
  >
    <div
      class="graphic-content__content-container graphic-content__content-container--hidden"
    >
      <span>
        Test
      </span>
    </div>
    <div
      class="graphic-content__warning-container"
    >
      <div
        class="graphic-content__warning-container__inner"
      >
        <div
          class="graphic-content__text"
        >
          This image contains graphic content
        </div>
        <br />
        <button
          class="button__outer button__outer--regular button__outer--no-bouncy graphic-content__text"
          type="button"
        >
          Show graphic content
        </button>
        <br />
        <div
          class="checkbox"
        >
          <input
            aria-invalid="false"
            aria-label="Always show graphic content"
            class="checkbox__input"
            name="Always show graphic content"
            readonly=""
            type="checkbox"
          />
          <svg
            class="icon checkbox__check"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
            />
          </svg>
          <span
            aria-hidden="true"
            class="checkbox__label graphic-content__text"
          >
             
            Always show graphic content
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
